# mu3d

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.md  README.md
assets/: octa.off
data/: armadillo-386.off  hand-336.off  horse-312.off  star-PNSplit.off
examples/: CMakeLists.txt  main.cpp
examples/assets/: igloo.off  igloo_complex.off
mu3d/: CMakeLists.txt  edge.cpp  facetoplane.cpp  gluetab.cpp  gluetabtoplane.cpp  gluetag.cpp  gluetagtoplane.cpp  graph.cpp  utility.cpp
mu3d/include/: edge.h  facetoplane.h  gluetag.h  gluetagtoplane.h  graph.h  utility.h  utility.hpp
mu3d/mu3d/: edge.h  facetoplane.h  gluetab.h  gluetabtoplane.h  graph.h  utility.hpp
mu3dpy/: mu3d.py
source/: CMakeLists.txt  camera.cpp  camera.h  edge.cpp  edge.h  facetoplane.cpp  facetoplane.h  gluetag.cpp  gluetag.h  gluetagtoplane.cpp  gluetagtoplane.h  graph.cpp  graph.h  main.cpp  mainwindow.cpp  mainwindow.h  model.cpp  model.h  oglplanarwidget.cpp  oglplanarwidget.h  oglwidget.cpp  oglwidget.h  textrender.cpp  textrender.h  utility.cpp  utility.h
source/shader/: shader.frag  shader.vert  text.frag  text.vert
test/: CMakeLists.txt  main.cpp
thesis/: figoverview.tex  meshunfolding.bib  meshunfolding.tex  vutinfth.cls
thesis/graphics/: TU_INF_Logo_gray.eps  TU_INF_header.eps  concept.tex  figcgal.tex  figcolinearline.tex  figcolineartri.tex  figdualgraph.tex  figgluetag.tex  figlineintersection.tex  fignolineintersection.tex  fignooverlaptriangles.tex  figoverlap.tex  figoverlap2.tex  figoverlaptriangles.tex  figoverview.tex  figunfold2d.tex  figunfold3d.tex
